# rknn-car

./: README.md
install/: local_setup.sh  setup.sh
install/rknn_yolo/lib/rknn_yolo/: camre  crossroad  crossroad_detector  line_following_node  motor  opencv_pid  opencv_pid_1  rknn_yolo  targer
install/rknn_yolo/share/rknn_yolo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rknn_yolo/share/rknn_yolo/launch/: demo.launch.py
log/: latest_build
src/rknn_yolo/: package.xml  setup.cfg  setup.py
src/rknn_yolo/msg/: WardCrossroadDirection.msg
src/rknn_yolo/rknn_yolo/: camre.py  motor.py  opencv_pid_1.py  targer.py
src/rknn_yolo/rknn_yolo/lib/: one_number.py  pid_controller.py
